# StockKLine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  autogrid.h  datafile.cpp  datafile.h  mainwindow.cpp  myI18N_zh_CN.ts
